# p-Game_Engine_Cpp_OpenGL

./: .gitignore  CMakeLists.txt  DEV_LOG.md  README.md  WORKFLOW_GUIDELINES.md
docs/: engine_wiki.md  legacy_main.cpp  session_notes.md
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
source/: Game.cpp  Game.h  main.cpp
